--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <img src="images/minimapfairylights.jpg" alt'mini map fairylights'>
+<img src="images/avocado-mushroom-airfreshner.jpg" alt="avocado mushroom air freshener">
 
 
