--- a/index.html
+++ b/index.html
@@ -1,4 +1,82 @@
-<img src="images/minimapfairylights.jpg" alt'mini map fairylights'>
-<img src="images/avocado-mushroom-airfreshner.jpg" alt="avocado mushroom air freshener">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mt Nest Crafts | Eco Handmade Gifts</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+
+<header class="site-header">
+  <h1>Mt Nest Crafts</h1>
+  <p class="tagline">Handmade eco-friendly home décor & gifts</p>
+
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="shop.html">Shop</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
+
+<section class="hero">
+  <div class="hero-text">
+    <h2>Slow-made. Sustainable. Full of character.</h2>
+    <p>
+      Welcome to Mt Nest Crafts — a small eco-conscious craft studio creating unique handmade pieces
+      designed to bring warmth, light and a little joy into everyday spaces.
+    </p>
+  </div>
+
+  <div class="hero-image placeholder">
+    <!-- HERO IMAGE PLACEHOLDER -->
+    <p>Add hero image here</p>
+  </div>
+</section>
+
+<section class="products">
+  <h2>Featured Creations</h2>
+
+  <div class="product-grid">
+    <div class="product-card placeholder">
+      <p>Mini lampshade fairy lights<br>(image placeholder)</p>
+    </div>
+
+    <div class="product-card placeholder">
+      <p>Bottle lamps<br>(image placeholder)</p>
+    </div>
+
+    <div class="product-card placeholder">
+      <p>Guitar shelves<br>(image placeholder)</p>
+    </div>
+
+    <div class="product-card placeholder">
+      <p>Avocado mushroom air fresheners<br>(image placeholder)</p>
+    </div>
+  </div>
+</section>
+
+<section class="cta">
+  <h2>Shop the collection</h2>
+  <p>All items are available via our Etsy shop.</p>
+  <a class="button" href="https://www.etsy.com" target="_blank">Visit Etsy Shop</a>
+</section>
+
+<footer class="site-footer">
+  <div class="socials">
+    <a href="#">Instagram</a>
+    <a href="#">Facebook</a>
+    <a href="#">TikTok</a>
+    <a href="#">YouTube</a>
+    <a href="https://www.etsy.com" target="_blank">Etsy</a>
+  </div>
+
+  <p>© Mt Nest Crafts · Handmade with care</p>
+</footer>
+
+</body>
+</html>
+
 
 
