--- a/about.html
+++ b/about.html
@@ -1,1 +1,99 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About | MTNestCrafts</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header class="site-header">
+    <nav class="nav">
+      <a href="index.html">Home</a>
+      <a href="about.html" class="active">About</a>
+      <a href="shop.html">Shop</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+
+  <main class="content">
+    <section class="hero">
+      <h1>Our Story</h1>
+      <p class="intro">Handmade, recycled, and created with care in Dorset.</p>
+    </section>
+
+    <section class="text-block">
+      <p>
+        After our children had flown the nest — and we had decorated just about everything in sight —
+        <strong>MTNestCrafts</strong> was born.
+      </p>
+
+      <p>
+        Through our shared love of recycling and creativity, we came up with an idea to light up our campercar.
+        What started as a fun project soon became something friends and family couldn’t stop asking for.
+      </p>
+
+      <p>
+        Our unique, vintage-style <strong>lampshade fairy lights</strong> and <strong>bottle lights</strong>
+        quickly grew in popularity, and before we knew it, MTNestCrafts became a small eco-focused business.
+      </p>
+    </section>
+
+    <section class="image-placeholder">
+      <p>📷 Image placeholder – camper van / fairy lights / workshop</p>
+    </section>
+
+    <section class="text-block">
+      <p>
+        We try to use as many recycled materials as possible and work closely with local businesses
+        who save items for us that would otherwise end up in landfill.
+      </p>
+
+      <p>
+        From bottles and festival cups to paper, fabric and wood — every piece tells a story
+        and helps reduce waste. #waronwaste
+      </p>
+    </section>
+
+    <section class="team">
+      <h2>Meet the Makers</h2>
+
+      <div class="team-member">
+        <h3>Dave</h3>
+        <p>
+          The husband, the dad, the practical one. Dependable, funny, kind — and endlessly patient
+          with my constant hoarding of "useful" bits and crafty mess.
+        </p>
+        <p>Here are a few of his projects…</p>
+        <div class="image-placeholder">
+          <p>📷 Image placeholder – Dave’s projects</p>
+        </div>
+      </div>
+
+      <div class="team-member">
+        <h3>My Mum</h3>
+        <p>
+          The Grandma of MTNestCrafts — where the arty, crafty and musical genes come from.
+          At 85 years old she is still creating beautiful things today.
+        </p>
+        <p>Here are some of her creations…</p>
+        <div class="image-placeholder">
+          <p>📷 Image placeholder – Mum’s creations</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="closing">
+      <p>
+        Every item we make is created slowly, thoughtfully and with sustainability at heart.
+        Thank you for supporting handmade and helping us save things from landfill.
+      </p>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <p>&copy; MTNestCrafts – Handmade in Dorset</p>
+  </footer>
+</body>
+</html>
 
