--- a/shop.html
+++ b/shop.html
@@ -1,1 +1,106 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Shop | MTNestCrafts</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header class="site-header">
+    <nav class="nav">
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="shop.html" class="active">Shop</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
 
+  <main class="content">
+    <section class="hero">
+      <h1>The Shop</h1>
+      <p class="intro">
+        Handmade, recycled creations — available via our Etsy shop.
+      </p>
+    </section>
+
+    <section class="shop-intro">
+      <p>
+        Our items are made in small batches using repurposed and recycled materials.
+        Because of this, availability changes regularly.
+      </p>
+      <p>
+        To keep things simple and up to date, all purchases are handled through our Etsy shop.
+      </p>
+    </section>
+
+    <section class="product-section">
+      <h2>Bottle Lights</h2>
+      <p>
+        Hand painted and decoupaged bottle lights created from unusual bottles saved from landfill.
+        Each piece is unique.
+      </p>
+      <div class="image-placeholder">
+        <p>📷 Image placeholder – bottle lights</p>
+      </div>
+      <a href="https://www.etsy.com/uk/shop/MTNestCrafts" target="_blank" class="button">
+        View Bottle Lights on Etsy
+      </a>
+    </section>
+
+    <section class="product-section">
+      <h2>Mini Lampshade Fairy Lights</h2>
+      <p>
+        Made using recycled festival taster cups, carefully cleaned and repurposed into charming
+        mini lampshade fairy lights.
+      </p>
+      <div class="image-placeholder">
+        <p>📷 Image placeholder – mini lampshade fairy lights</p>
+      </div>
+      <a href="https://www.etsy.com/uk/shop/MTNestCrafts" target="_blank" class="button">
+        View Fairy Lights on Etsy
+      </a>
+    </section>
+
+    <section class="product-section">
+      <h2>Guitar Shelves</h2>
+      <p>
+        Up-cycled guitars transformed into functional wall shelves.
+        No two pieces are ever the same.
+      </p>
+      <div class="image-placeholder">
+        <p>📷 Image placeholder – guitar shelves</p>
+      </div>
+      <a href="https://www.etsy.com/uk/shop/MTNestCrafts" target="_blank" class="button">
+        View Guitar Shelves on Etsy
+      </a>
+    </section>
+
+    <section class="product-section">
+      <h2>Avocado Mushroom Air Fresheners</h2>
+      <p>
+        A fun and quirky newer addition to MTNestCrafts.
+        Handmade air fresheners with an eco-conscious approach.
+      </p>
+      <div class="image-placeholder">
+        <p>📷 Image placeholder – avocado mushroom air fresheners</p>
+      </div>
+      <a href="https://www.etsy.com/uk/shop/MTNestCrafts" target="_blank" class="button">
+        View Air Fresheners on Etsy
+      </a>
+    </section>
+
+    <section class="cta">
+      <p>
+        Looking for something custom or spotted something you like on social media?
+        Feel free to get in touch.
+      </p>
+      <a href="contact.html" class="button">Contact Me</a>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <p>&copy; MTNestCrafts – Handmade in Dorset | #waronwaste</p>
+  </footer>
+</body>
+</html>
