--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,76 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Contact | MTNestCrafts</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header class="site-header">
+    <nav class="nav">
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="shop.html">Shop</a>
+      <a href="contact.html" class="active">Contact</a>
+    </nav>
+  </header>
 
+  <main class="content">
+    <section class="hero">
+      <h1>Get in Touch</h1>
+      <p class="intro">
+        Questions, custom ideas or just fancy saying hello?
+      </p>
+    </section>
+
+    <section class="contact-text">
+      <p>
+        If you’ve spotted something you like, have a question about an item,
+        or would like to discuss a custom piece, I’d love to hear from you.
+      </p>
+
+      <p>
+        You can contact me directly by email, or via social media — I try to reply as soon as I can.
+      </p>
+    </section>
+
+    <section class="contact-details">
+      <h2>Email</h2>
+      <p>
+        <a href="mailto:andrea.mtnestcrafts@gmail.com">
+          andrea.mtnestcrafts@gmail.com
+        </a>
+      </p>
+    </section>
+
+    <section class="contact-form">
+      <h2>Send a Message</h2>
+      <p>(Contact form placeholder — can be added later)</p>
+
+      <div class="form-placeholder">
+        <p>📝 Name field</p>
+        <p>📝 Email field</p>
+        <p>📝 Message box</p>
+        <p>🟢 Send button</p>
+      </div>
+    </section>
+
+    <section class="socials">
+      <h2>Find Us On</h2>
+      <ul class="social-links">
+        <li><a href="#">Instagram</a></li>
+        <li><a href="#">Facebook</a></li>
+        <li><a href="#">TikTok</a></li>
+        <li><a href="#">YouTube</a></li>
+        <li><a href="https://www.etsy.com/uk/shop/MTNestCrafts" target="_blank">Etsy</a></li>
+      </ul>
+      <p class="note">(Social links can be connected when you’re ready)</p>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <p>&copy; MTNestCrafts – Handmade in Dorset | #waronwaste</p>
+  </footer>
+</body>
+</html>
