--- a/contact.html
+++ b/contact.html
@@ -59,13 +59,13 @@
     <section class="socials">
       <h2>Find Us On</h2>
       <ul class="social-links">
-        <li><a href="#">Instagram</a></li>
-        <li><a href="#">Facebook</a></li>
-        <li><a href="#">TikTok</a></li>
-        <li><a href="#">YouTube</a></li>
-        <li><a href="https://www.etsy.com/uk/shop/MTNestCrafts" target="_blank">Etsy</a></li>
+        <li><a href="https://www.instagram.com/mtnestcrafts/" target="_blank">Instagram</a></li>
+        <li><a href="https://www.facebook.com/mtnestcrafts" target="_blank">Facebook</a></li>
+        <li><a href="https://www.tiktok.com/@mtnestcrafts" target="_blank">TikTok</a></li>
+        <li><a href="https://www.youtube.com/@MTNestCrafts" target="_blank">YouTube</a></li>
+        <li><a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank">Etsy</a></li>
       </ul>
-      <p class="note">(Social links can be connected when you’re ready)</p>
+      <p class="note">Follow along for new makes, behind-the-scenes, and updates.</p>
     </section>
   </main>
 
@@ -74,3 +74,4 @@
   </footer>
 </body>
 </html>
+
