--- a/index.html
+++ b/index.html
@@ -43,9 +43,12 @@
       <p>Mini lampshade fairy lights<br>(image placeholder)</p>
     </div>
 
-    <div class="product-card placeholder">
-      <p>Bottle lamps<br>(image placeholder)</p>
-    </div>
+    <img 
+  src="images/copper-fern-bottlelamp.jpg"
+  alt="Handmade recycled bottle lamp"
+  class="product-image"
+/>
+
 
     <div class="product-card placeholder">
       <p>Guitar shelves<br>(image placeholder)</p>
