--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
 <section class="products">
   <h2>Featured Creations</h2>
 
-  <div class="product-grid">
-    <div class="product-card placeholder">
-      <p>Mini lampshade fairy lights<br>(image placeholder)</p>
-    </div>
+  <img
+  src="images/mini-lampshade-fairylights.jpg"
+  alt="Hand crafted mini lampshade fairy lights made from recycled materials"
+  class="product-image"
+/>
+
 
     <img 
   src="images/copper-fern-bottlelamp.jpg"
