--- a/index.html
+++ b/index.html
@@ -56,11 +56,12 @@
       <p>Guitar shelves<br>(image placeholder)</p>
     </div>
 
-    <div class="product-card placeholder">
-      <p>Avocado mushroom air fresheners<br>(image placeholder)</p>
-    </div>
-  </div>
-</section>
+    <img
+  src="images/avocado-mushroom-airfreshner.jpg"
+  alt="Avocado mushroom air freshener made from recycled materials"
+  class="product-image"
+/>
+
 
 <section class="cta">
   <h2>Shop the collection</h2>
