--- a/index.html
+++ b/index.html
@@ -52,9 +52,11 @@
 />
 
 
-    <div class="product-card placeholder">
-      <p>Guitar shelves<br>(image placeholder)</p>
-    </div>
+ <img
+  src="images/guitar-shelf.jpg"
+  alt="Upcycled guitar shelf handmade from reclaimed materials"
+  class="product-image"
+/>
 
    <img
   src="images/avocado-mushroom-airfreshener.jpg"
