--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
 <section class="products">
   <h2>Featured Creations</h2>
+<div class="product-grid">
 
   <img
   src="images/mini-lampshade-fairylights.jpg"
@@ -63,6 +64,7 @@
   alt="Avocado mushroom air freshener made from recycled materials"
   class="product-image"
 />
+</div>
 
 </section>
 
