--- a/index.html
+++ b/index.html
@@ -39,32 +39,55 @@
   <h2>Featured Creations</h2>
 <div class="product-grid">
 
-  <img
-  src="images/mini-lampshade-fairylights.jpg"
-  alt="Hand crafted mini lampshade fairy lights made from recycled materials"
-  class="product-image"
-/>
-
-
-    <img 
-  src="images/copper-fern-bottlelamp.jpg"
-  alt="Handmade recycled bottle lamp"
-  class="product-image"
-/>
-
-
- <img
-  src="images/guitar-shelf.jpg"
-  alt="Upcycled guitar shelf handmade from reclaimed materials"
-  class="product-image"
-/>
-
-   <img
-  src="images/avocado-mushroom-airfreshener.jpg"
-  alt="Avocado mushroom air freshener made from recycled materials"
-  class="product-image"
-/>
+  <div class="product">
+  <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank">
+    <img
+      src="images/mini-lampshade-fairylights.jpg"
+      alt="Mini lampshade fairy lights"
+      class="product-image"
+    />
+  </a>
+  <p class="product-title">Mini Lampshade Fairy Lights</p>
 </div>
+
+
+
+    <div class="product">
+  <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank">
+    <img
+      src="images/copper-fern-bottlelamp.jpg"
+      alt="Handmade recycled bottle lamp"
+      class="product-image"
+    />
+  </a>
+  <p class="product-title">Handmade Recycled Bottle Lamp</p>
+</div>
+
+
+
+ <div class="product">
+  <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank">
+    <img
+      src="images/guitar-shelf.jpg"
+      alt="Upcycled guitar shelf"
+      class="product-image"
+    />
+  </a>
+  <p class="product-title">Upcycled Guitar Shelf</p>
+</div>
+
+
+   <div class="product">
+  <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank">
+    <img
+      src="images/avocado-mushroom-airfreshener.jpg"
+      alt="Avocado mushroom air freshener"
+      class="product-image"
+    />
+  </a>
+  <p class="product-title">Avocado Mushroom Air Freshener</p>
+</div>
+
 
 </section>
 
