--- a/index.html
+++ b/index.html
@@ -97,8 +97,10 @@
 <section class="cta">
   <h2>Shop the collection</h2>
   <p>All items are available via our Etsy shop.</p>
-  <a class="button" href="https://www.etsy.com" target="_blank">Visit Etsy Shop</a>
-</section>
+  <a class="button" href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank">
+  Visit Etsy Shop
+</a>
+
 
 <footer class="site-footer">
   <div class="socials">
