Update contact.html Remove contact form and add email + stockists

--- a/contact.html
+++ b/contact.html
@@ -44,17 +44,41 @@
       </p>
     </section>
 
-    <section class="contact-form">
-      <h2>Send a Message</h2>
-      <p>(Contact form placeholder — can be added later)</p>
+    <section class="contact-info">
+  <h2>Get in touch</h2>
 
-      <div class="form-placeholder">
-        <p>📝 Name field</p>
-        <p>📝 Email field</p>
-        <p>📝 Message box</p>
-        <p>🟢 Send button</p>
-      </div>
-    </section>
+  <p>
+    If you’d like to ask a question, check availability, or discuss a custom piece,
+    you’re very welcome to email me directly:
+  </p>
+
+  <p>
+    <strong>Email:</strong>
+    <a href="mailto:andrea.mtnestcrafts@gmail.com">
+      andrea.mtnestcrafts@gmail.com
+    </a>
+  </p>
+
+  <h3>Find my work in person</h3>
+
+  <p>
+    If you're ever in Dorset, you can also find my creations at:
+  </p>
+
+  <p>
+    <strong>Absolute Artisans</strong><br>
+    Cranborne Rd, Wimborne<br>
+    BH21 4HW
+  </p>
+
+  <p>
+    <strong>Buttons &amp; Bows Gift Shop</strong><br>
+    The Courtyard Craft Centre<br>
+    Huntick Rd, Lytchett Minster<br>
+    Poole BH16 6BA
+  </p>
+</section>
+
 
     <section class="socials">
       <h2>Find Us On</h2>
