Update contact.html Make social links clickable

--- a/contact.html
+++ b/contact.html
@@ -98,4 +98,15 @@
   </footer>
 </body>
 </html>
+<section class="social-links">
+  <h3>Follow MTNestCrafts</h3>
+
+  <p>
+    <a href="https://www.instagram.com/mtnestcrafts/" target="_blank">Instagram</a> ·
+    <a href="https://www.facebook.com/mtnestcrafts" target="_blank">Facebook</a> ·
+    <a href="https://www.tiktok.com/@mtnestcrafts" target="_blank">TikTok</a> ·
+    <a href="https://www.youtube.com/@MTNestCrafts" target="_blank">YouTube</a> ·
+    <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank">Etsy</a>
+  </p>
+</section>
 
