--- a/index.html
+++ b/index.html
@@ -103,13 +103,18 @@
 
 
 <footer class="site-footer">
-  <div class="socials">
-    <a href="#">Instagram</a>
-    <a href="#">Facebook</a>
-    <a href="#">TikTok</a>
-    <a href="#">YouTube</a>
-    <a href="https://www.etsy.com" target="_blank">Etsy</a>
-  </div>
+  <section class="social-links">
+  <h3>Follow MTNestCrafts</h3>
+
+  <p>
+    <a href="https://www.instagram.com/mtnestcrafts/" target="_blank">Instagram</a> ·
+    <a href="https://www.facebook.com/mtnestcrafts" target="_blank">Facebook</a> ·
+    <a href="https://www.tiktok.com/@mtnestcrafts" target="_blank">TikTok</a> ·
+    <a href="https://www.youtube.com/@MTNestCrafts" target="_blank">YouTube</a> ·
+    <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank">Etsy</a>
+  </p>
+</section>
+
 
   <p>© Mt Nest Crafts · Handmade with care</p>
 </footer>
