--- a/about.html
+++ b/about.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About | MTNestCrafts</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 </head>
 <body>
   <header class="site-header">
@@ -92,8 +93,28 @@
   </main>
 
   <footer class="site-footer">
-    <p>&copy; MTNestCrafts – Handmade in Dorset</p>
-  </footer>
-</body>
-</html>
+  <div class="social-icons">
+    <a href="https://www.instagram.com/mtnestcrafts/" target="_blank" aria-label="Instagram">
+      <i class="fab fa-instagram"></i>
+    </a>
+
+    <a href="https://www.facebook.com/mtnestcrafts" target="_blank" aria-label="Facebook">
+      <i class="fab fa-facebook-f"></i>
+    </a>
+
+    <a href="https://www.tiktok.com/@mtnestcrafts" target="_blank" aria-label="TikTok">
+      <i class="fab fa-tiktok"></i>
+    </a>
+
+    <a href="https://www.youtube.com/@MTNestCrafts" target="_blank" aria-label="YouTube">
+      <i class="fab fa-youtube"></i>
+    </a>
+
+    <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank" aria-label="Etsy">
+      <i class="fab fa-etsy"></i>
+    </a>
+  </div>
+
+  <p>© MTNestCrafts · Handmade in Dorset · #waronwaste</p>
+</footer>
 
