Update contact.html update footer

--- a/contact.html
+++ b/contact.html
@@ -123,8 +123,10 @@
     <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank" aria-label="Etsy">
       <i class="fab fa-etsy"></i>
     </a>
-  </div>
-</section>
+</div>
+
+  <p>© MTNestCrafts · Handmade in Dorset · #waronwaste</p>
+</footer>
 
   
 
