Update index.html update footer

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mt Nest Crafts | Eco Handmade Gifts</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 </head>
 <body>
 
@@ -103,24 +104,28 @@
 
 
 <footer class="site-footer">
-  <section class="social-links">
-  <h3>Follow MTNestCrafts</h3>
+  <div class="social-icons">
+    <a href="https://www.instagram.com/mtnestcrafts/" target="_blank" aria-label="Instagram">
+      <i class="fab fa-instagram"></i>
+    </a>
 
-  <p>
-    <a href="https://www.instagram.com/mtnestcrafts/" target="_blank">Instagram</a> ·
-    <a href="https://www.facebook.com/mtnestcrafts" target="_blank">Facebook</a> ·
-    <a href="https://www.tiktok.com/@mtnestcrafts" target="_blank">TikTok</a> ·
-    <a href="https://www.youtube.com/@MTNestCrafts" target="_blank">YouTube</a> ·
-    <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank">Etsy</a>
-  </p>
-</section>
+    <a href="https://www.facebook.com/mtnestcrafts" target="_blank" aria-label="Facebook">
+      <i class="fab fa-facebook-f"></i>
+    </a>
 
+    <a href="https://www.tiktok.com/@mtnestcrafts" target="_blank" aria-label="TikTok">
+      <i class="fab fa-tiktok"></i>
+    </a>
 
-  <p>© Mt Nest Crafts · Handmade with care</p>
+    <a href="https://www.youtube.com/@MTNestCrafts" target="_blank" aria-label="YouTube">
+      <i class="fab fa-youtube"></i>
+    </a>
+
+    <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank" aria-label="Etsy">
+      <i class="fab fa-etsy"></i>
+    </a>
+  </div>
+
+  <p>© MTNestCrafts · Handmade in Dorset · #waronwaste</p>
 </footer>
-
-</body>
-</html>
-
-
 
