--- a/contact.html
+++ b/contact.html
@@ -96,38 +96,28 @@
     </section>
   </main>
 
+   </main>
+
   <footer class="site-footer">
-    <p>&copy; MTNestCrafts – Handmade in Dorset | #waronwaste</p>
+    <div class="social-icons">
+      <a href="https://www.instagram.com/mtnestcrafts/" target="_blank" aria-label="Instagram">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="https://www.facebook.com/mtnestcrafts" target="_blank" aria-label="Facebook">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="https://www.tiktok.com/@mtnestcrafts" target="_blank" aria-label="TikTok">
+        <i class="fab fa-tiktok"></i>
+      </a>
+      <a href="https://www.youtube.com/@MTNestCrafts" target="_blank" aria-label="YouTube">
+        <i class="fab fa-youtube"></i>
+      </a>
+      <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank" aria-label="Etsy">
+        <i class="fab fa-etsy"></i>
+      </a>
+    </div>
+
+    <p>© MTNestCrafts · Handmade in Dorset · #waronwaste</p>
   </footer>
 </body>
 </html>
-<section class="social-links">
-  <h3>Follow MTNestCrafts</h3>
-
-  <div class="social-icons">
-    <a href="https://www.instagram.com/mtnestcrafts/" target="_blank" aria-label="Instagram">
-      <i class="fab fa-instagram"></i>
-    </a>
-
-    <a href="https://www.facebook.com/mtnestcrafts" target="_blank" aria-label="Facebook">
-      <i class="fab fa-facebook-f"></i>
-    </a>
-
-    <a href="https://www.tiktok.com/@mtnestcrafts" target="_blank" aria-label="TikTok">
-      <i class="fab fa-tiktok"></i>
-    </a>
-
-    <a href="https://www.youtube.com/@MTNestCrafts" target="_blank" aria-label="YouTube">
-      <i class="fab fa-youtube"></i>
-    </a>
-
-    <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank" aria-label="Etsy">
-      <i class="fab fa-etsy"></i>
-    </a>
-</div>
-
-  <p>© MTNestCrafts · Handmade in Dorset · #waronwaste</p>
-</footer>
-
-  
-
