--- a/contact.html
+++ b/contact.html
@@ -12,9 +12,12 @@
 <body>
   <header class="site-header">
     <nav class="nav">
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="shop.html">Shop</a>
+      <a href="index.html" class="active">Home</a>
+
+      <a href="about.html" class="active">About</a>
+
+      <a href="shop.html" class="active">Shop</a>
+>
       <a href="contact.html" class="active">Contact</a>
     </nav>
   </header>
