--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
   <p class="tagline">Handmade eco-friendly home décor & gifts</p>
 
   <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="shop.html">Shop</a>
-    <a href="contact.html">Contact</a>
+   <a href="index.html" class="active">Home</a>
+
+    <a href="about.html" class="active">About</a>
+
+    <a href="shop.html" class="active">Shop</a>
+
+    <a href="contact.html" class="active">Contact</a>
+
   </nav>
 </header>
 
