--- a/about.html
+++ b/about.html
@@ -46,9 +46,14 @@
       </p>
     </section>
 
-    <section class="image-placeholder">
-      <p>📷 Image placeholder – camper van / fairy lights / workshop</p>
-    </section>
+   <section class="about-image">
+  <img
+    src="images/mini-map-fairylights.jpg"
+    alt="MTNestCrafts workshop with handmade fairy lights and recycled crafts"
+    class="about-photo"
+  />
+</section>
+
 
     <section class="text-block">
       <p>
