--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
   <div class="product">
   <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank">
     <img
-      src="images/mini-lampshade-fairylights.jpg"
-      alt="Mini lampshade fairy lights"
-      class="product-image"
-    />
+  src="images/pink-fairylights.jpg"
+  alt="Mini lampshade fairy lights"
+  class="product-image"
+/>
+
   </a>
   <p class="product-title">Mini Lampshade Fairy Lights</p>
 </div>
