--- a/about.html
+++ b/about.html
@@ -12,13 +12,11 @@
 <body>
   <header class="site-header">
     <nav class="nav">
-      <a href="index.html" class="active">Home</a>
+      <a href="index.html">Home</a>
+<a href="about.html" class="active">About</a>
+<a href="shop.html">Shop</a>
+<a href="contact.html">Contact</a>
 
-      <a href="about.html" class="active">About</a>
-      
-     <a href="shop.html" class="active">Shop</a>
-
-      <a href="contact.html" class="active">Contact</a>
 
     </nav>
   </header>
