--- a/about.html
+++ b/about.html
@@ -76,10 +76,14 @@
           with my constant hoarding of "useful" bits and crafty mess.
         </p>
         <p>Here are a few of his projects…</p>
-        <div class="image-placeholder">
-          <p>📷 Image placeholder – Dave’s projects</p>
-        </div>
-      </div>
+        <div class="about-image">
+  <img
+    src="images/dave-projects.jpg"
+    alt="Handmade upcycled projects created by Dave at MTNestCrafts"
+    class="about-photo"
+  />
+</div>
+
 
       <div class="team-member">
         <h3>My Mum</h3>
@@ -88,10 +92,14 @@
           At 85 years old she is still creating beautiful things today.
         </p>
         <p>Here are some of her creations…</p>
-        <div class="image-placeholder">
-          <p>📷 Image placeholder – Mum’s creations</p>
-        </div>
-      </div>
+        <div class="about-image">
+  <img
+    src="images/mum-creations.jpg"
+    alt="Handcrafted creations made by Mum at MTNestCrafts"
+    class="about-photo"
+  />
+</div>
+
     </section>
 
     <section class="closing">
