--- a/about.html
+++ b/about.html
@@ -76,13 +76,20 @@
           with my constant hoarding of "useful" bits and crafty mess.
         </p>
         <p>Here are a few of his projects…</p>
-        <div class="about-image">
+        <div class="about-image-grid">
   <img
     src="images/dave-projects.jpg"
     alt="Handmade upcycled projects created by Dave at MTNestCrafts"
-    class="about-photo"
+    class="about-photo small-photo"
+  />
+
+  <img
+    src="images/dave-copper-creations.jpg"
+    alt="Copper creations handmade by Dave at MTNestCrafts"
+    class="about-photo small-photo"
   />
 </div>
+
 
 
       <div class="team-member">
