--- a/about.html
+++ b/about.html
@@ -76,12 +76,14 @@
           with my constant hoarding of "useful" bits and crafty mess.
         </p>
         <p>Here are a few of his projects…</p>
-        <div class="about-image-grid">
+       <div class="about-image">
   <img
-    src="images/dave-projects.jpg"
-    alt="Handmade upcycled projects created by Dave at MTNestCrafts"
-    class="about-photo small-photo"
+    src="images/daveandrea.jpg"
+    alt="Dave and Andrea, creators of MTNestCrafts"
+    class="about-photo"
   />
+</div>
+
 
   <img
     src="images/dave-copper-creations.jpg"
