--- a/about.html
+++ b/about.html
@@ -95,18 +95,26 @@
 
 
       <div class="team-member">
-        <h3>My Mum</h3>
-        <p>
-          The Grandma of MTNestCrafts — where the arty, crafty and musical genes come from.
-          At 87 years old she is still creating beautiful things today.
-        </p>
-        <p>Here are some of her creations…</p>
-        <div class="about-image">
-  <img
-    src="images/mum-creations.jpg"
-    alt="Handcrafted creations made by Mum at MTNestCrafts"
-    class="about-photo"
-  />
+  <h3>Sustainability Awards</h3>
+
+  <p>
+    MTNestCrafts has been recognised for its commitment to sustainability,
+    reuse, and reducing waste.
+  </p>
+
+  <div class="about-image-grid">
+    <img
+      src="images/sustainability-award-level-1.jpg"
+      alt="Level 1 Sustainable Business Award"
+      class="about-photo small-photo"
+    />
+
+    <img
+      src="images/sustainability-award-level-2.jpg"
+      alt="Level 2 Sustainable Business Award"
+      class="about-photo small-photo"
+    />
+  </div>
 </div>
 
     </section>
