--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
       <h2>Meet the Makers</h2>
 
       <div class="team-member">
-        <h3>Dave</h3>
+        <h3>Dave and Andrea</h3>
         <p>
           The husband, the dad, the practical one. Dependable, funny, kind — and endlessly patient
           with my constant hoarding of "useful" bits and crafty mess.
