--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
         <p>Here are a few of his projects…</p>
        <div class="about-image">
   <img
-    src="images/daveandrea.jpg"
+    src="images/daveandrea.jpeg"
     alt="Dave and Andrea, creators of MTNestCrafts"
     class="about-photo"
   />
@@ -104,13 +104,13 @@
 
   <div class="about-image-grid">
     <img
-      src="images/sustainability-award-level-1.jpg"
+      src="images/sustainability-award-level-1.jpeg"
       alt="Level 1 Sustainable Business Award"
       class="about-photo small-photo"
     />
 
     <img
-      src="images/sustainability-award-level-2.jpg"
+      src="images/sustainability-award-level-2.jpeg"
       alt="Level 2 Sustainable Business Award"
       class="about-photo small-photo"
     />
