--- a/about.html
+++ b/about.html
@@ -76,20 +76,20 @@
           with my constant hoarding of "useful" bits and crafty mess.
         </p>
         <p>Here are a few of his projects…</p>
-       <div class="about-image">
+      <div class="about-image-grid">
   <img
     src="images/daveandrea.jpeg"
     alt="Dave and Andrea, creators of MTNestCrafts"
     class="about-photo"
   />
-</div>
-
 
   <img
     src="images/dave-copper-creations.jpg"
     alt="Copper creations handmade by Dave at MTNestCrafts"
-    class="about-photo small-photo"
+    class="about-photo"
   />
+</div>
+
 </div>
 
 
