--- a/about.html
+++ b/about.html
@@ -28,21 +28,35 @@
     </section>
 
     <section class="text-block">
-      <p>
-        After our children had flown the nest — and we had decorated just about everything in sight —
-        <strong>MTNestCrafts</strong> was born.
-      </p>
+  <h2 class="name-heading">Andrea</h2>
 
-      <p>
-        Through our shared love of recycling and creativity, we came up with an idea to light up our campercar.
-        What started as a fun project soon became something friends and family couldn’t stop asking for.
-      </p>
+  <p>
+    I’m Andrea, a recycler of rubbish and founder of <strong>MTNestCrafts</strong>,
+    a small eco-focused business. I spend my time turning waste materials into
+    beautiful gifts that have a use in the home.
+  </p>
 
-      <p>
-        Our unique, vintage-style <strong>lampshade fairy lights</strong> and <strong>bottle lights</strong>
-        quickly grew in popularity, and before we knew it, MTNestCrafts became a small eco-focused business.
-      </p>
-    </section>
+  <p>
+    Back in 2010 I rescued a pile of shot glasses from the bin at a local cider festival.
+    That was the beginning of my creative recycling journey. Influenced by the huge
+    lanterns hanging in the trees at my favourite festival, I set about making miniature
+    versions for my daughter’s campervan.
+  </p>
+
+  <p>
+    They were a hit with friends who encouraged me to make more. Fast forward to 2016 —
+    due to debilitating migraines — I retired from working as a TA in my local school
+    and started my own small business turning waste materials into lovely gifts.
+  </p>
+
+  <p>
+    This allowed me to work when I was feeling well and not to feel so guilty when I
+    couldn’t. Fast forward to the present day and I am still here, making unique,
+    vintage-style lampshade fairy lights and bottle lights — repurposing rubbish and
+    saving plastic from landfill.
+  </p>
+</section>
+
 
    <section class="about-image">
   <img
@@ -70,26 +84,33 @@
       <h2>Meet the Makers</h2>
 
       <div class="team-member">
-        <h3>Dave</h3>
-        <p>
-          The husband, the dad, the practical one. Dependable, funny, kind — and endlessly patient
-          with my constant hoarding of "useful" bits and crafty mess.
-        </p>
-        <p>Here are a few of his projects…</p>
-      <div class="about-image-grid">
-  <img
-    src="images/daveandrea.jpeg"
-    alt="Dave and Andrea, creators of MTNestCrafts"
-    class="about-photo"
-  />
+  <h2 class="name-heading">Dave</h2>
 
-  <img
-    src="images/dave-copper-creations.jpg"
-    alt="Copper creations handmade by Dave at MTNestCrafts"
-    class="about-photo"
-  />
-</div>
+  <p>
+    The husband, the dad, the practical one. Dependable, funny, kind — and endlessly
+    patient with my constant hoarding of "useful" bits and crafty mess.
+  </p>
 
+  <p>
+    When he’s not repairing lifeboats he is often found in his garage,
+    beavering away…
+  </p>
+
+  <p><strong>Here are a few of his projects…</strong></p>
+
+  <div class="about-image-grid">
+    <img
+      src="images/daveandrea.jpeg"
+      alt="Dave and Andrea of MTNestCrafts"
+      class="about-photo small-photo"
+    />
+
+    <img
+      src="images/dave-copper-creations.jpg"
+      alt="Copper creations handmade by Dave"
+      class="about-photo small-photo"
+    />
+  </div>
 </div>
 
 
