--- a/shop.html
+++ b/shop.html
@@ -84,10 +84,10 @@
     </section>
 
     <section class="product-section">
-      <h2>Avocado Mushroom Air Fresheners</h2>
+      <h2>Avocado Mushroom Air Fresheners and other Random Upcycles</h2>
       <p>
         A fun and quirky newer addition to MTNestCrafts.
-        Handmade air fresheners with an eco-conscious approach.
+        Hand carved avocado stone air fresheners with an eco-conscious approach.
       </p>
       <div class="image-placeholder">
         <p>📷 Image placeholder – avocado mushroom air fresheners</p>
