--- a/shop.html
+++ b/shop.html
@@ -47,9 +47,14 @@
         Hand painted and decoupaged bottle lights created from unusual bottles saved from landfill.
         Each piece is unique.
       </p>
-      <div class="image-placeholder">
-        <p>📷 Image placeholder – bottle lights</p>
-      </div>
+      <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank" class="shop-image-link">
+  <img
+    src="images/bottle-lamp-collage.jpeg"
+    alt="Handmade recycled bottle lights by MTNestCrafts"
+    class="shop-image"
+  />
+</a>
+
       <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank" class="button">
         View Bottle Lights on Etsy
       </a>
@@ -61,8 +66,9 @@
         Made using recycled festival taster cups, carefully cleaned and repurposed into charming
         mini lampshade fairy lights.
       </p>
-      <div class="image-placeholder">
-        <p>📷 Image placeholder – mini lampshade fairy lights</p>
+    <img src="images/mini-lampshades-collage.jpeg" … >
+alt="Handmade mini lampshade fairylights by MTNestCrafts"
+    class="shop-image"
       </div>
       <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank" class="button">
         View Fairy Lights on Etsy
@@ -75,8 +81,9 @@
         Up-cycled guitars transformed into functional wall shelves.
         No two pieces are ever the same.
       </p>
-      <div class="image-placeholder">
-        <p>📷 Image placeholder – guitar shelves</p>
+      <img src="images/guitar-shelf-collage.jpeg" … >
+alt="Handmade guitar shelf by MTNestCrafts"
+    class="shop-image"
       </div>
       <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank" class="button">
         View Guitar Shelves on Etsy
@@ -89,8 +96,9 @@
         A fun and quirky newer addition to MTNestCrafts.
         Hand carved avocado stone air fresheners with an eco-conscious approach.
       </p>
-      <div class="image-placeholder">
-        <p>📷 Image placeholder – avocado mushroom air fresheners</p>
+      <img src="images/random-upcycle-collage.jpeg" … >
+alt="Handcarved avocado stone air fresheners and other random upcycles by MTNestCrafts"
+    class="shop-image"
       </div>
       <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank" class="button">
         View Air Fresheners on Etsy
