--- a/shop.html
+++ b/shop.html
@@ -66,10 +66,14 @@
         Made using recycled festival taster cups, carefully cleaned and repurposed into charming
         mini lampshade fairy lights.
       </p>
-    <img src="images/mini-lampshades-collage.jpeg" … >
-alt="Handmade mini lampshade fairylights by MTNestCrafts"
+   <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank" class="shop-image-link">
+  <img
+    src="images/mini-lampshades-collage.jpeg"
+    alt="Handmade mini lampshade fairy lights by MTNestCrafts"
     class="shop-image"
-      </div>
+  />
+</a>
+
       <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank" class="button">
         View Fairy Lights on Etsy
       </a>
@@ -81,10 +85,14 @@ alt="Handmade mini lampshade fairylights by MTNestCrafts"
         Up-cycled guitars transformed into functional wall shelves.
         No two pieces are ever the same.
       </p>
-      <img src="images/guitar-shelf-collage.jpeg" … >
-alt="Handmade guitar shelf by MTNestCrafts"
+     <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank" class="shop-image-link">
+  <img
+    src="images/guitar-shelf-collage.jpeg"
+    alt="Handmade guitar shelf by MTNestCrafts"
     class="shop-image"
-      </div>
+  />
+</a>
+
       <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank" class="button">
         View Guitar Shelves on Etsy
       </a>
@@ -96,10 +104,14 @@ alt="Handmade guitar shelf by MTNestCrafts"
         A fun and quirky newer addition to MTNestCrafts.
         Hand carved avocado stone air fresheners with an eco-conscious approach.
       </p>
-      <img src="images/random-upcycle-collage.jpeg" … >
-alt="Handcarved avocado stone air fresheners and other random upcycles by MTNestCrafts"
+     <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank" class="shop-image-link">
+  <img
+    src="images/random-upcycle-collage.jpeg"
+    alt="Handcarved avocado stone air fresheners and other upcycled creations by MTNestCrafts"
     class="shop-image"
-      </div>
+  />
+</a>
+
       <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank" class="button">
         View Air Fresheners on Etsy
       </a>
