--- a/shop.html
+++ b/shop.html
@@ -67,12 +67,18 @@
         mini lampshade fairy lights.
       </p>
    <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank" class="shop-image-link">
+  <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts"
+   target="_blank"
+   class="shop-image-link">
+
   <img
     src="images/mini-lampshades-collage.jpeg"
-    alt="Handmade mini lampshade fairy lights by MTNestCrafts"
+    alt="Handmade mini lampshade fairylights by MTNestCrafts"
     class="shop-image"
   />
+
 </a>
+
 
       <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank" class="button">
         View Fairy Lights on Etsy
@@ -86,12 +92,18 @@
         No two pieces are ever the same.
       </p>
      <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank" class="shop-image-link">
+ <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts"
+   target="_blank"
+   class="shop-image-link">
+
   <img
     src="images/guitar-shelf-collage.jpeg"
     alt="Handmade guitar shelf by MTNestCrafts"
     class="shop-image"
   />
+
 </a>
+
 
       <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank" class="button">
         View Guitar Shelves on Etsy
@@ -105,12 +117,18 @@
         Hand carved avocado stone air fresheners with an eco-conscious approach.
       </p>
      <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank" class="shop-image-link">
+ <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts"
+   target="_blank"
+   class="shop-image-link">
+
   <img
     src="images/random-upcycle-collage.jpeg"
-    alt="Handcarved avocado stone air fresheners and other upcycled creations by MTNestCrafts"
+    alt="Handcarved avocado stone air fresheners and other upcycles by MTNestCrafts"
     class="shop-image"
   />
+
 </a>
+
 
       <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank" class="button">
         View Air Fresheners on Etsy
