--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@
 
 
 
-<section class="cta">
-  <h2>Shop the collection</h2>
-  <p>All items are available via our Etsy shop.</p>
-  <a class="button" href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank">
-  Visit Etsy Shop
-</a>
+<div class="shop-link">
+  <a href="https://www.etsy.com/uk/shop/MTNestCardsandCrafts" target="_blank">
+    Shop the collection
+  </a>
+</div>
+
 
 
 <footer class="site-footer">
